--- a/src/componets/basics/basic.css
+++ b/src/componets/basics/basic.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Itim&family=Jura:wght@300;500;700&family=Nunito:wght@300;400&display=swap');
 
-/* variables */
-
 :root {
     --font-nunito: 'nunito', sans-serif;
     --font-jura: 'Jura', sans-serif;
@@ -9,7 +7,7 @@
     --font-ubuntu: 'Ubuntu', sans-serif;
     --primary-color1: #001A00;
     --primary-color: #00401E;
-    --primary-color2: rgba(0, 64, 30, 0.511)E;
+    --primary-color2: rgba(0, 64, 30, 0.511);
     --primary-color3: #1C5A1C;
     --secondary-color50: #FFF000;
     --secondary-color: #D3D3D3;
@@ -20,8 +18,6 @@
     --quaternary-color25: #33333340;
     --dp-bg-color: #FDFFFF;
 }
-
-/* variables */
 
 h1,
 h2,
@@ -54,28 +50,30 @@ body {
     cursor: pointer;
 }
 
-.button__primary::before {
-    content: "";
-    position: absolute;
-    top: -4px;
-    left: -4px;
-    width: 10%;
-    height: 40%;
-    border-top: 2px solid var(--primary-color);
-    border-left: 2px solid var(--primary-color);
-    border-radius: 3px 0 0 0;
-}
-
+.button__primary::before,
 .button__primary::after {
     content: "";
     position: absolute;
-    bottom: -4px;
-    right: -4px;
     width: 10%;
     height: 40%;
-    border-bottom: 2px solid var(--primary-color);
-    border-right: 2px solid var(--primary-color);
+    /* border: 2px solid var(--primary-color); */
+    border-color: var(--primary-color);
+    border-style: solid;
+    border-radius: var(--primary-border-radius);
+}
+
+.button__primary::before {
+    top: -3px;
+    left: -3px;
+    border-radius: 3px 0 0 0;
+    border-width: 2px 0 0 2px;
+}
+
+.button__primary::after {
+    bottom: -3px;
+    right: -3px;
     border-radius: 0 0 3px 0;
+    border-width: 0 2px 2px 0;
 }
 
 .button__primary:hover::before,
@@ -88,8 +86,6 @@ body {
 .button__primary:hover {
     transition: all 0.3s;
 }
-
-
 
 /* Product Card */
 
@@ -113,13 +109,8 @@ body {
     position: relative;
     margin-top: 60px;
     height: 180px;
-}
-
-.product__card {
     text-align: center;
 }
-
-
 
 .product__card div {
     transform: translateY(-20px);
@@ -135,13 +126,13 @@ body {
     height: auto;
 }
 
-.product__info h2{
+.product__info h2 {
     font-size: 23px;
     font-weight: 600;
     color: var(--primary-color1);
 }
 
-.product__description{
+.product__description {
     font-size: 15px;
 }
 
@@ -166,34 +157,43 @@ body {
     text-align: center;
 }
 
-
-
-
-
-/* Product Card */
+/* Product Card - Media Queries */
 
 @media screen and (max-width: 600px) {
-    .button__primary{
+    body{
+        overflow-x: hidden;
+        display: block;
+        width: 100%;
+    }
+    .button__primary {
         padding: 0.2rem 0.5rem;
     }
 
-    .prd_prc_l h3{
+    .prd_prc_l h3 {
         font-size: 14px;
     }
 
-    .prd_prc_l span{
+    .prd_prc_l span {
         font-size: 10px;
     }
-    
+
     .product__card__container {
-        width: 155px;
-        height: 100px;
+        width: 145px;
+        height: 110px;
         border-radius: 5px;
+        margin-left: 0.5rem;
     }
-    .product__price{
+
+    .button__primary::before,
+    .button__primary::after {
+        display: none;
+    }
+
+    .product__price {
         height: 40px;
         margin-bottom: 7px;
     }
+
     .product__card__container:hover {
         height: 140px;
     }
@@ -201,12 +201,12 @@ body {
     .video-poster {
         width: 90px;
     }
-    .product__info h2{
+
+    .product__info h2 {
         font-size: 15px;
     }
 
-    .product__description{
+    .product__description {
         font-size: 12px;
     }
-    
 }
